little SEO changes

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Alejandro Solano - Full Stack Engineer specializing in user-friendly software solutions. Passionate about web development and UI/UX design.">
+    <meta property="og:title" content="Alejandro Solano | Full Stack Engineer">
+    <meta property="og:description" content="Alejandro Solano - Full Stack Engineer specializing in user-friendly software solutions. Passionate about web development and UI/UX design.">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
     <title>Alejandro Solano | Full Stack Engineer</title>
 </head>
@@ -78,8 +79,8 @@
                 </div>
             </div>
             <div class="right">
-                <p>Email: alejandro.sr@rytsolucion.io</p>
-                <p>Phone: +506 8801-0944</p>
+                <p>Email: <a href="mailto:alejandro.sr@rytsolucion.io">alejandro.sr@rytsolucion.io</a></p>
+                <p>Phone: <a href="tel:+50688010944">+506 8801-0944</a></p>
             </div>
         </header>
 
